# di

./: .gitignore  README.md  a.out  inject_markers.h  inject_markers.h.gch  simple_di.h  test.cc  type_holder.h  type_info.h  type_info.h.gch
debug/: debug.h
src/: simple_di.h
src/di_debug/: debug.cc
tests/: CMakeCache.txt  CMakeLists.txt  Makefile  Simple_DI_Tests.cbp  cmake_install.cmake  di_tests.cpp
